Fixed timeline arrow on iOS devices

--- a/docroot/profiles/labp/themes/la/labusinessportaltheme/css/styles.css
+++ b/docroot/profiles/labp/themes/la/labusinessportaltheme/css/styles.css
@@ -7514,7 +7514,7 @@ ul.facetapi-facet-field-resource-type li a,
 }
 /* line 21, ../sass/components/timeline/_timeline.scss */
 .panel__timeline .timeline__arrow {
-  font-size: 41px;
+  font-size: 0;
   width: 44px;
   font-family: "Merriweather", serif;
   color: rgba(255, 255, 255, 0.3);
