--- a/docroot/profiles/labp/themes/la/labusinessportaltheme/sass/components/timeline/_timeline.scss
+++ b/docroot/profiles/labp/themes/la/labusinessportaltheme/sass/components/timeline/_timeline.scss
@@ -19,7 +19,7 @@
   
   // Previous and Next buttons
   .timeline__arrow {
-    font-size: 41px;
+    font-size: 0;
     width: 44px;
     font-family: $heading-font;
     color: rgba(255,255,255, 0.3);
